# bot

./: .env.example  .gitignore  CORE_TRADING_IMPLEMENTATION_COMPLETE.md  DASHBOARD_FIXES_COMPLETE.md  DASHBOARD_IMPLEMENTATION_COMPLETE.md  DASHBOARD_STATIC_FILE_FIXES.md  DATABASE_SETUP_COMPLETE.md  DATABASE_SETUP_GUIDE.md  Dockerfile  FINAL_VALIDATION_COMPLETE.md  FINAL_WORKING_SOLUTION.md  IMPLEMENTATION_SUCCESS_SUMMARY.md  IMPLEMENTATION_SUMMARY.md  LICENSE  LIVE_TRADING_SETUP.md  Makefile  PORTFOLIO_HISTORY_404_FIX_COMPLETE.md  PROJECT_ROADMAP_AND_COMPLETION_TIMELINE.md  QUICK_START_AUTOMATED_TRADING.md  QUICK_START_DASHBOARD.md  README.md  TROUBLESHOOTING_GUIDE_COMPLETE.md  WORKING_DASHBOARD_SERVER.py  debug_dashboard.html  debug_server.py  demo_technical_analysis.py  demo_trading.py  docker-compose.yml  final_integration_test.py  final_portfolio_test.py  integration_test.py  main_server_fixed.py  main_server_live.py  minimal_server_test.py  minimal_test.py  minimal_working_server.py  pyproject.toml  pytest.ini  quick_start.py  quick_trading_test.py  (+34 more)
.github/workflows/: ci.yml
config/: prometheus.yml  settings.yaml
docs/: PRD.md  QA-REVIEW-SUMMARY.md  architecture.md  getting-started.md  implementation-plan.md  task-checklist.md  task-prioritization.md  technical-analysis-engine.md  trading-concepts.md
sql/: init.sql
src/: __init__.py  main.py
src/analysis/: __init__.py
src/analysis/indicators/: __init__.py  base.py  momentum.py  moving_averages.py  oscillators.py  volatility.py
src/api/: __init__.py  models.py  routes.py
src/core/: __init__.py  config.py  data_manager.py  database_portfolio_manager.py  engine.py  live_data_manager.py  logger.py  memory_storage.py  order_manager.py  portfolio_manager.py  risk_manager.py  strategy_manager.py
src/database/: __init__.py  connection.py  models.py  repositories.py
src/integrations/: __init__.py  base.py
src/static/: dashboard.js  index.html  styles.css
src/strategies/: __init__.py  base_strategy.py  simple_ma_strategy.py  technical_analysis_strategy.py
tests/: __init__.py  conftest.py
tests/integration/: test_api.py
tests/unit/: test_config.py  test_engine.py  test_strategy_manager.py  test_technical_indicators.py  test_trading_engine.py
(+14 files in other folders)
